# esp32

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  DEVELOPMENT_PLAN.md  FEATURE_ROADMAP.md  FIRMWARE_INDEX.md  PROJECT_AUDIT.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE.md  README.md  REPOS.md  current_project.md  pyproject.cyberdeck.toml  pyproject.toml
.cursor/rules/: docker-and-commit.mdc  lab-guidance.mdc  project-structure.mdc  setup-context.mdc
.github/workflows/: build-tbeam1w.yml
artifacts/: README.md
cyberdeck_cli/: __init__.py  device_cmd.py  firmware_cmd.py  flash_cmd.py  inspect_cmd.py  main.py  registry.py
devices/: README.md
devices/heltec_meshpocket_10000/: README.md
docker/: DEPENDENCIES.md  Dockerfile  Dockerfile.cyberdeck  Dockerfile.esp-idf-lab  README.md  TOOLS_AND_SDK.md  cyber-lab-fs-dev.override.yml
docs/: AGENT_BACKEND_CONTEXT.md  AGENT_DATABASE_CONTEXT.md  AGENT_DOCKER_CONTEXT.md  AGENT_FRONTEND_CONTEXT.md  AGENT_SETUP_CONTEXT.md  CYBERDECK_MANAGER_SPEC.md  FLIPPER_ZERO.md  INSTALL.md  MESHTASTIC_MESHCORE_LAUNCHER_DEVICES.md  PCB_3D_DESIGN_STACK_SPEC.md  SDK_INTEGRATION.md  cyberdeck_scaffold.md
inventory/: SCHEMA.md
mcp-server/: Dockerfile  README.md  cursor-mcp-example-docker.json  cursor-mcp-example.json  docker-compose.yml  package-lock.json  package.json
orchestrator/: README.md
regions/: README.md  regions.json
registry/: README.md  rf_presets.json
scripts/: detect-toolchain.sh  download_meshpocket_docs.sh  flash.sh  install_wizard.py  lab-build.sh  map_wizard.py  run_inventory_for_lan.sh  sd_validator.py
(+91 files in other folders)
